# cgat-daisy

./: .flake8  .travis.yml  README.md  README.rst  all-tests.sh  install-CGAT-tools.sh  install.sh  pyproject.toml  readthedocs.yml  requirements.txt  requires.txt  setup.py
.github/workflows/: ci.yaml  release.yaml
conda/environments/: bench-devel.yml
daisy/: Library.py  Storage.py  Toolkit.py  Workflow.py  combinations.py  library.py  storage.py  toolkit.py  workflow.py
daisy/TaskLibrary/: AssemblyMetrics.py  AssemblyTools.py  BAMMetrics.py  BAMTools.py  BEDMetrics.py  BEDTools.py  CollateRunner.py  FASTAMetrics.py  FASTATools.py  FASTQMetrics.py  GATKRunner.py  GWASTools.py  LDSC.py  MetricRunner.py  ONT.py  RTGMetrics.py  Runner.py  SimulateReads.py  SplitRunner.py  ToolRunner.py  Utils.py  VCFCollate.py  VCFMetrics.py  VCFSplit.py  VCFTools.py  VariantCallers.py  __init__.py  defaults.yml  (+1 more)
doc/: Arvados.rst  BenchmarkConfiguration.rst  BenchmarkDatabase.rst  BenchmarkOverview.rst  BenchmarkReference.rst  BenchmarkUsage.rst  Benchmarking.rst  CommandReference.rst  DaisyChains.rst  Deployment.rst  Development.rst  Docker.rst  Engine.rst  Glossary.rst  Installation.rst  Makefile  ModuleReference.rst  Reference.rst  TaskLibrary.rst  TemporaryFiles.rst  Testing.rst  Tools.rst  Tutorials.rst  Usage.rst  VariantCallingBenchmarkExample.rst  collect.py  conf.py  index.rst  make.bat  requirements.txt  template_tool.rst.tmpl
tests/: TestUtils.py  benchmark_tool_empty_option.yml  test_benchmark_simple.py  test_storage.py  test_workflow_build_combinations.py
(+133 files in other folders)
