[tool.poetry]
name = "cgat-daisy"
version = "0.1.10"
description = ""
authors = ["Andreas Heger <andreas.heger@genomicsplc.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pysam = "^0.16.0"
SQLAlchemy = "^1.4.27"
pandas = "^1.3.4"
ruffus = "^2.8.4"
cgatcore = "^0.6.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
