[tool.poetry]
name = "cgat-daisy"
version = "0.1.12"
description = "A benchmarking framework"
authors = ["Andreas Heger <andreas.heger@genomicsplc.com>"]
packages = [
    { include = "daisy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pysam = "^0.17.0"
SQLAlchemy = "^1.4.27"
pandas = "^1.3.4"
ruffus = "^2.8.4"
cgatcore = "^0.6.9"
paramiko = "^2.8.0"
"ruamel.yaml" = "^0.17.17"
PyYAML = "^6.0"
gevent = "^21.8.0"
apsw = "^3.36.0"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
daisy = 'daisy.tools.cli:main'
